# fullstack

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
.devcontainer/: Dockerfile  devcontainer.json
api/: Cargo.toml
api-docs/redoc/: index.html
api-docs/swagger-ui/: index.html
api/src/: access_token.rs  email.rs  lib.rs  login.rs  logout.rs  private.rs  signup.rs  username.rs
api/src/check/: access_token.rs  email_availability.rs  mod.rs  username_availability.rs
api/tests/: failed_login.rs  user_onboarding.rs
api/tests/shared/: fixture.rs  macros.rs  setup.rs
auth/: Cargo.toml  build.rs
auth/migrations/: 002_create_sessions_table.sql  003_create_access_tokens_table.sql  004_create_permissions_model.sql
auth/src/: access_token.rs  authorization_header.rs  basic.rs  lib.rs  main.rs  permission.rs  principal.rs  session.rs  span.rs  user.rs
auth/src/api/: health.rs  introspect.rs  key_rotation.rs  login.rs  logout.rs  mod.rs  private.rs  signup.rs  sysinfo.rs
auth/src/api/access_token/: generate.rs  verify.rs
auth/src/api/access_token/permissions/: mod.rs
auth/src/api/email/: initiate_verification.rs  mod.rs  verify_email.rs
auth/src/api/permissions/: assign.rs  mod.rs
auth/src/core/: access_token.rs  mod.rs  permission.rs  principal.rs  session.rs  user.rs
auth/src/smtp/: email_verification.rs  mod.rs
authlib/: Cargo.toml
authlib/src/: access_token.rs  basic.rs  permission.rs
boxer/: Cargo.toml
boxer/src/: boxer.rs  context.rs  lib.rs
cache/: Cargo.toml
cache/src/: cache.rs  cache_any.rs  cache_registry.rs  cfg_debug.rs  dashcache.rs  lib.rs  registry.rs  tag.rs
cli/: Cargo.toml
cli/src/: main.rs
client-ip/: Cargo.toml
compiletime/: Cargo.toml
compiletime/src/: lib.rs
contextual/: Cargo.toml
contextual/src/: error.rs
dashcache/: Cargo.toml
data-access/: Cargo.toml
data-access/src/: lib.rs
email/: Cargo.toml
email/src/: email.rs  lib.rs
error/: Cargo.toml
error/src/: axum_error_response.rs  context.rs  internal_error.rs  lib.rs
extra/: Cargo.toml
extra/src/: error_response.rs  json_error_response.rs  lib.rs
middleware/: Cargo.toml
middleware/src/: client_ip.rs  leaked_5xx.rs  lib.rs  rate_limit.rs
migrations/: 20241015141500_create_access_tokens_table.sql  20250410130000_create_permissions_model.sql  20250706102300_email_verification.sql
migrations/seed/: permissions.sql
oblivious/: Cargo.toml
seed/: Cargo.toml
server/: .gitignore  Cargo.toml  build.rs
server-core/: Cargo.toml
server-core/src/: access_token.rs  auth.rs  authorization_header.rs  cache.rs  data_access.rs  email.rs  error.rs  lib.rs  login.rs  middleware.rs  password.rs  permissions.rs  private.rs  rate_limiter.rs  session.rs  session_id.rs  signup.rs  token.rs  user.rs  username.rs
server-core/src/check/: access_token.rs  email_availability.rs  mod.rs  username_availability.rs
server-core/src/misc/: mod.rs
server-core/src/types/: access_token.rs  authorization_header.rs  mod.rs  session_id.rs  user_id.rs
server-core/tests/: user_onboarding.rs
server-core/tests/shared/: macros.rs  request.rs  setup.rs
server/.sqlx/: query-00b6d2e1a5ee296334d5e39c73c9b11f8bdcc1a27cb18403997645fa245ec7ad.json  query-1b6ca67c80d8116161dd48f4cc1df8d47ba9087c7b783e98aba7972355a3cc9c.json  query-1d9248f52f88c20736e1bd74cf48ca4948093812059835251795e87f6d7089ff.json  query-2a6aa6e7deab60e87482a85e16392f566f3883cbdd7ca17516a75a9e7dd53713.json  query-4b9ce6dda4ecce046396dcbf0754e597a3163323c0bcf170405287966b4c7dc7.json  query-4c284af9f8c7f22846ef362e08fd7060fb3aa15f5d4e0f490c46e984c3869e47.json  query-83e9e7188be8ae1e36ea1ccfa30ffd0a8bf0bd25b3dfce1a0613f8d926970128.json  query-a4e23c7fb7fa46ff51cea35fd3de9577e7926932ff9b002e53fff4a922476173.json  query-a646c0374f28cf894083362d223cac135caaf87e94c8c8aec1668b9207e2faa6.json  query-f1e82bae09e1f74c79dbb76ffaac8def19a84786dd8f324b9f408769616e3631.json  query-fe344de76c0406394b5d8cdb20257f4ea604b4dc47481ba57fb9e98e7f47f2e1.json
server/migrations/: 20240911172000_create_users_table.sql  20240912083000_create_sessions_table.sql  20241015141500_create_access_tokens_table.sql  20241015141500_create_tokens_table.sql  202504101300_create_permissions_model.sql
server/src/: access_token.rs  error.rs  health.rs  lib.rs  login.rs  logout.rs  main.rs  middleware.rs  principal.rs  private.rs  redacted.rs  request_id.rs  session_id.rs  signup.rs  smtp.rs  span.rs  token.rs  types.rs  user_id.rs
server/src/api/: access_token.rs  email.rs  health.rs  key_rotation.rs  login.rs  logout.rs  mod.rs  private.rs  signup.rs  sysinfo.rs  username.rs  verify_email.rs
server/src/api/access_token/: generate.rs  verify.rs
server/src/api/email/: check_availability.rs  check_verification_token.rs  initiate_verification.rs  mod.rs  verify_email.rs
server/src/api/permissions/: assign.rs  mod.rs
server/src/api/username/: check_availability.rs  mod.rs
server/src/check/: access_token.rs  email_availability.rs  mod.rs  username_availability.rs
server/src/extractor/: mod.rs  trace_id.rs  user_id.rs
server/src/extractors/: mod.rs  session_extractor.rs
server/src/middleware/: client_ip.rs  latency.rs  leaked_5xx.rs  mod.rs  rate_limit.rs  trace.rs
server/src/misc/: lock_manager.rs  mod.rs
server/src/types/: access_token.rs  available_username.rs  email.rs  mod.rs  password.rs  permissions.rs  session_id.rs  user_id.rs  username.rs
server/tests/: access_token.rs  failed_login.rs  health.rs  macros.rs  setup.rs  user_onboarding.rs
server/tests/shared/: fixture.rs  macros.rs  mod.rs  request.rs  setup.rs
signature/: Cargo.toml
signature/src/: lib.rs
tag/: Cargo.toml
templates/: Cargo.toml  verify-email.html
test-proc-macros/: Cargo.toml
test-proc-macros/src/: lib.rs
token/: Cargo.toml
token/src/: lib.rs  signed.rs
ui/: app.js  app.mjs  debounce.mjs  global.css  home.html  home.js  home.mjs  index.html  login.html  login.js  package-lock.json  package.json  signup.html  signup.mjs  tsconfig.json  vars.css  vite.config.ts
ui/lib/: router.mjs  (+1 more)
validation/: Cargo.toml
wasm/: Cargo.toml
(+29 files in other folders)
