[workspace]
resolver = "2"
members = [
    "api",
    "cli",
    "compiletime",
    "server",
    "server-core",
    "test-proc-macros", 
    "validation",
    "wasm",
]

[profile.release]
lto = true
codegen-units = 1

[profile.web]
inherits = "release"
opt-level = "z"     # Optimize for size
lto = true          # Enable Link Time Optimization (LTO)
codegen-units = 1   # Forces the compiler to use a single code generation unit to improve optimizations
panic = "abort"     # Remove panic support, reducing code size

# mailtutan --maildir-path=/tmp
