[workspace]
resolver = "2"
members = [
    "auth",
    "boxer",
    "cache",
    "cli",
    "compiletime",
    "data-access",
    "email",
    "extra",
    "server",
    "test-proc-macros",
    "token",
    "validation",
    "wasm",
]

[profile.release]
lto = true
codegen-units = 1

[profile.web]
inherits = "release"
opt-level = "z"     # Optimize for size
lto = true          # Enable Link Time Optimization (LTO)
codegen-units = 1   # Forces the compiler to use a single code generation unit to improve optimizations
panic = "abort"     # Remove panic support, reducing code size

# mailtutan --maildir-path=/tmp
