[package]
name = "auth"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", optional = true }
base64 = "0.22"
bcrypt = "0.17"
cookie = "0.18"
http = "1"
sqlx = "0.8"
thiserror = "2"
time = "0.3"
tracing = { version = "0.1", optional = true }

cache = { path = "../cache", features = ["dashcache"] }
data-access = { path = "../data-access" }
email = { path = "../email", features = ["sqlx"] }
extra = { path = "../extra", optional = true }
tag = { path = "../tag" }
token = { path = "../token" }

[features]
axum = ["dep:axum", "dep:extra", "extra/json-error-response"]
tracing = ["dep:tracing", "cache/tracing", "data-access/tracing"]
