[package]
name = "auth"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", optional = true }
base64 = "0.22"
bcrypt = "0.17"
cookie = "0.18"
http = "1"
serde = { version = "1", optional = true }
sqlx = { version = "0.8", features = ["sqlite", "time"] }
thiserror = "2"
time = "0.3"
tracing = { version = "0.1", optional = true }
utoipa = { version = "5.4.0", optional = true }

contextual = { path = "../contextual" }
email = { path = "../email", features = ["sqlx"] }
extra = { path = "../extra", optional = true }
token = { path = "../token" }

[features]
axum = [
    "dep:axum",
    "dep:extra",
    "dep:serde",
    "extra/error-kind",
    "extra/error-response",
    "serde/derive",
]
openapi = ["dep:utoipa"]
tracing = ["dep:tracing"]
