[package]
name = "server-core"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
axum = "0.8"
axum-extra = { version = "0.10", features = ["cookie"] }
base64 = "0.22"
bcrypt = "0.17"
dashmap = "6.1"
forwarded-header-value = "0.1.1"
lettre = { version = "0.11", features = ["serde"] }
rand = "0.9"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.8", features = ["sqlite", "time"] }
thiserror = "2"
time = { version = "0.3", features = ["serde"] }
tracing = "0.1"

validation = { path = "../validation" }
