[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
axum-extra = { version = "0.10", features = ["cookie"] }
axum-macros = "0.5"
bcrypt = "0.17"
clap = { version = "4", features = ["derive", "env"] }
lettre = { version = "0.11", default-features = false, optional = true }
dashmap = "6.1"
forwarded-header-value = "0.1.1"
http = "1"
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "sqlite"] }
sysinfo = { version = "0.36", features = ["serde"] }
tera = { version = "1", optional = true }
thiserror = "2"
time = "0.3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "request-id", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
utoipa = { version = "5.4.0", optional = true }
utoipa-rapidoc = { version = "6", optional = true }
utoipa-scalar = { version = "0.3", optional = true }

auth = { path = "../auth", features = ["axum", "tracing"] }
contextual = { path = "../contextual" }
dashcache = { path = "../dashcache", features = ["tracing"] }
data-access = { path = "../data-access", features = ["tracing"] }
email = { path = "../email", features = ["serde", "sqlite"] }
extra = { path = "../extra", features = ["error-response"] }
tag = { path = "../tag" }
token = { path = "../token", optional = true }
validation = { path = "../validation" }

[dev-dependencies]
test-proc-macros = { path = "../test-proc-macros", features = [
    "email",
    "password",
    "username",
] }

[features]
openapi = ["dep:utoipa", "extra/openapi"]
rapidoc = ["dep:utoipa-rapidoc", "openapi"]
rate-limit = []
scalar = ["dep:utoipa-scalar", "openapi"]
smtp = [
    "dep:lettre",
    "dep:tera",
    "dep:token",
    "lettre/builder",
    "lettre/pool",
    "lettre/smtp-transport",
    "lettre/tokio1-rustls-tls",
    "lettre/tracing",
]
smtp--no-tls = []
ui = []
