[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
axum-extra = { version = "0.10", features = ["cookie"] }
axum-macros = "0.5"
bcrypt = "0.17"
clap = { version = "4", features = ["derive", "env"] }
lettre = { version = "0.11", default-features = false, optional = true }
dashmap = "6.1"
forwarded-header-value = { version = "0.1.1", optional = true }
http = "1"
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "sqlite"] }
sysinfo = { version = "0.37", features = ["serde"] }
tera = { version = "1", optional = true }
thiserror = "2"
time = "0.3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "request-id", "trace"] }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", optional = true }
utoipa = { version = "5.4.0", optional = true }

auth = { path = "../auth", features = ["axum"] }
contextual = { path = "../contextual" }
dashcache = { path = "../dashcache" }
data-access = { path = "../data-access" }
email = { path = "../email", features = ["serde", "sqlite"] }
extra = { path = "../extra", features = ["error-response"] }
tag = { path = "../tag" }
token = { path = "../token", optional = true }
validation = { path = "../validation" }

[dev-dependencies]
test-proc-macros = { path = "../test-proc-macros", features = [
    "email",
    "password",
    "username",
] }

[features]
client-ip = ["dep:forwarded-header-value"]
openapi = ["dep:utoipa", "auth/openapi", "extra/openapi"]
rate-limit = []
serve-dir = []
smtp = [
    "dep:lettre",
    "dep:tera",
    "dep:token",
    "lettre/builder",
    "lettre/pool",
    "lettre/smtp-transport",
    "lettre/tokio1-rustls-tls",
    "lettre/tracing",
]
smtp--no-tls = []
tracing = [
    "dep:tracing",
    "auth/tracing",
    "dashcache/tracing",
    "data-access/tracing",
    "tracing-subscriber/env-filter",
]
