[package]
name = "test-proc-macros"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
syn = "2"
quote = "1"

server-core = { path = "../server-core", optional = true }

[features]
username = ["dep:server-core"]
password = ["dep:server-core"]
email = ["dep:server-core"]

[dev-dependencies]
syn = { version = "2", features = ["extra-traits"] }
