[package]
name = "test-proc-macros"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
syn = "2"
quote = "1"

server-core = { path = "../server-core", optional = true }
validation = { path = "../validation", optional = true }

[features]
username = ["dep:validation"]
password = ["dep:validation"]
email = ["dep:server-core"]

[dev-dependencies]
syn = { version = "2", features = ["extra-traits"] }
