[package]
name = "token"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22"
hmac = { version = "0.12", optional = true }
rand = "0.9"
serde = { version = "1", optional = true }
serde_json = { version = "1", optional = true }
sha2 = "0.10"
time = { version = "0.3", optional = true }
thiserror = { version = "2", optional = true }

contextual = { path = "../contextual", optional = true }

[features]
signed = [
    "dep:contextual",
    "dep:hmac",
    "dep:serde",
    "dep:serde_json",
    "dep:time",
    "dep:thiserror",
    "serde/derive",
    "time/serde",
]
